--- a/photoshare_app/templates/photoshare_app/gallery.html
+++ b/photoshare_app/templates/photoshare_app/gallery.html
@@ -58,20 +58,24 @@
 
             <div class="col-md-9">
                 <div class = "row">
-
-                {% for photo in photos %}
-                <div class="col-md-4">
-                    <div class="card my-2">
-                        <img class="image-thumbail" src="{{photo.image.url}}" alt="Card image cap">
                 
+
+                {% for photo in photos  %}
+                <div class="col-md-4">
+                    <div class="card my-2" style="width: 18rem;">
+                        <img class = "image-thumbnail" 
+                        src="{{ photo.image.url }}" class="card-img-top" alt="...">
+                        
                         <div class="card-body">
-                            <small>Category: {{photo.category.name}}</small>
+                            <small> Category: {{ photo.category.name }}</small>
                         </div>
-                        <a href="{% url 'photo' photo.id %}" class="btn btn-outline-dark btn-sm m-1">View</a>
+                        <a href = "{% url 'photo' photo.id %}" class="btn btn-outline-dark btn-sm m-1">View</a>
                     </div>
                 </div>
                 {% empty %}
-                <h3>No photos...</h3>
+                <h3>
+                    No photos.....
+                </h3>
                 {% endfor %}
 
             </div>
