--- a/photoshare_app/templates/photoshare_app/gallery.html
+++ b/photoshare_app/templates/photoshare_app/gallery.html
@@ -66,7 +66,7 @@
                         {% if photo.image %}
                         <img class = "image-thumbnail" 
                         src="{{ photo.image.url }}" class="card-img-top" alt="...">
-                        {% endif }
+                        {% endif %}
                         
                         <div class="card-body">
                             <small> Category: {{ photo.category.name }}</small>
